examples/memory/positive/01_loaded_text_asset.skd
// Memory example 01: return region-owned Text through externally supplied Memory.

struct LoadedText {
    Text content
}

fn load_text(Memory assets_memory, Path path) returns LoadedText {
    place in assets_memory {
        new Text file_text = read(path)
        new LoadedText result = {content = file_text}
        return result
    }
}
