examples/memory/negative/08_nested_same_memory_place_in.skd
fn invalid_nested(Memory assets_memory) returns Int {
    place in assets_memory {
        place in assets_memory {
            new Text msg = "bad"
            output(msg)
        }
    }

    return 0
}
